package model;

public interface Worker extends Runnable {
    String workerName();
}