' Generated by UML Generator
' Encoded: lLXDK-Gs4BtpAtGqOQ3sFBLBxG2XQbBBBjbXmo6LWx2RGOj6SYGPCcpWjwSbsPOiomEfIkN6g3_qkljrgyr7RQWopORlwNicQgheXfISQhqmHh6Rni2ob6B5de2ysxjZ5P2IgPB3tfxJ8fViwGaKewTItBBr9qahK5UW3VcnHyWBnz_QYtwZl05TxC_9WsIL5Pex9H_rzHs82wOtr9HtK2sKebjT6DZKPqpDoIKrTrcJpr9SIiqCUu3MSzRckSFvHI6mNnjee4TtOF2lHLKvKGJCdL_HUyWAd8-VDxNPff9JBZMiZAorDKwbUD7Yre1oMbSkZcA4iilc1HLq7INoi5H03RJ7HUaoQkESanMMIQpHKs9hqrLpMleeli9tA0ru21PZN0X7WOMeBfKiGMjdC5q3BjVwcmrKiTASA5hU0pe-bmfB-4eHB4HaIgDOJ1ANEt-u55XHojaJDKoA66Ff5Sw0OyMLHhGkqvOArrJ1dMmqkDHMuwps2iCxfo-pKdIlm05E9RQwMO6x_okOHWdzkU7SWakPycBKjdTmfYWJ-fePH6TEk2on1TTvLj0JD4gIvewcexYnuhQcuAiQfyqHUIfbxafdCcmNTtHgoJYyB0XNXff6Vwihv6jMOLaj1T9v0yBeLC6p2EdalKmto3ajiJvR3ymtHziLysGapOXslbPCtCz91D4UPDhcUTTaQvlHdPmp3d4BMicXXPCpBF8s-rRV3ibYFyLjtM5Sc2pZXc8XP0LpyekMEFigG7qcpEz_MBK7BBzDjpViyn2fjZb6XtysJC4v0rwDz6Rarfv_fXk8nafdsbtIJTrYf3mZ3tOIEs0x37qqKzQwZIkgFFu6TOkJBCdG2aS27lOFJIQ7VJ4liD4yMNvOEh3ocMpmgA1ghJi4Wqkz6RhHaaF26ky8DimKqahcKRliQ5vF7bQv2EsVsA1uxQe626UoVwTQikelZRcHVrdPOpV7sWljY4BEBeKLxc2v5LV0wHRZn4AijtDo5lySCDTZBLgOCvA2d94fY3Co2N1d4yx8Bd2kHLGp63QFKY56onvxshVVmHhCqj709dF0d1XdEq3Z1pxKBnGEtsXilnK7g1qWN_MQOdZ5Xd7Ea3XSXXwPUiHzsST9MugtbDKDSRpf4zFc_RMB-zZF8FSUPYIl4C4vzB5rnlvNx7PIJiiIQeFfzZ7CoOt4_g22V216DJ2QWTt6CX7-JihaGf-HVE2xfxn5v9QS3bPCfh0a5RL5SBMjC_CFxMMTCJ_yBfbeqrMONDemHeSnvtSqtKBydgKwR26JeyPkH_OPt_MAUnBsiuzLk73PY-TaOUI6bVZAWENg1oBWSNXMlDjFvfQ98WcC6wHzE59yTcEp_L6x-jysIQEU3il0y8O37172FYfINCaYWo8gt-ruimXt6Ed_ZaupqyCnrfU5TbyD_weemQ5dhVUL7MQJnC0H5kPNluL6yojPCQUcM_WUYkOJPiyTlGyMmwwVxFVWhd2bVKk23gP6C8gOxXVdzaQtw0qowjGM7RH4zKqbJPxqbrUVz60_UAEyzHkUXlvBf5qaQKrBPhPzPxbshzpLKxLmEQZYGjnIhaCb-YkAWVTs1hvbcXnCK-jW1xLozS7cNJnGnkaDX-xZJvYevPaENo2lLc_y4JbQgP2KuluqJUl48uEzz9zkJYsei3kDqKm-U8Zb_rYIC8kv_p4S7HsFFeJIJoshawOdfpFbP_0TTNJqzt5sdT-RMBcTGNhzfEvnJCne0tTU_F2DZtywF1mksuaiMSjobabI8l6GC8D5D04wsZWTtA5zkbm6w7wVpCapy6CLYIfHJhBUq_32cfB443-LkJf4prZEqhz8eTXjL7bPMwn8ABje8vVJn0ZJkATZbAOTKZiuWZYvT32VHeJh16bThCkHGZRriSAG6nz1LCs6_mC
' URL: http://www.plantuml.com/plantuml/uml/lLXDK-Gs4BtpAtGqOQ3sFBLBxG2XQbBBBjbXmo6LWx2RGOj6SYGPCcpWjwSbsPOiomEfIkN6g3_qkljrgyr7RQWopORlwNicQgheXfISQhqmHh6Rni2ob6B5de2ysxjZ5P2IgPB3tfxJ8fViwGaKewTItBBr9qahK5UW3VcnHyWBnz_QYtwZl05TxC_9WsIL5Pex9H_rzHs82wOtr9HtK2sKebjT6DZKPqpDoIKrTrcJpr9SIiqCUu3MSzRckSFvHI6mNnjee4TtOF2lHLKvKGJCdL_HUyWAd8-VDxNPff9JBZMiZAorDKwbUD7Yre1oMbSkZcA4iilc1HLq7INoi5H03RJ7HUaoQkESanMMIQpHKs9hqrLpMleeli9tA0ru21PZN0X7WOMeBfKiGMjdC5q3BjVwcmrKiTASA5hU0pe-bmfB-4eHB4HaIgDOJ1ANEt-u55XHojaJDKoA66Ff5Sw0OyMLHhGkqvOArrJ1dMmqkDHMuwps2iCxfo-pKdIlm05E9RQwMO6x_okOHWdzkU7SWakPycBKjdTmfYWJ-fePH6TEk2on1TTvLj0JD4gIvewcexYnuhQcuAiQfyqHUIfbxafdCcmNTtHgoJYyB0XNXff6Vwihv6jMOLaj1T9v0yBeLC6p2EdalKmto3ajiJvR3ymtHziLysGapOXslbPCtCz91D4UPDhcUTTaQvlHdPmp3d4BMicXXPCpBF8s-rRV3ibYFyLjtM5Sc2pZXc8XP0LpyekMEFigG7qcpEz_MBK7BBzDjpViyn2fjZb6XtysJC4v0rwDz6Rarfv_fXk8nafdsbtIJTrYf3mZ3tOIEs0x37qqKzQwZIkgFFu6TOkJBCdG2aS27lOFJIQ7VJ4liD4yMNvOEh3ocMpmgA1ghJi4Wqkz6RhHaaF26ky8DimKqahcKRliQ5vF7bQv2EsVsA1uxQe626UoVwTQikelZRcHVrdPOpV7sWljY4BEBeKLxc2v5LV0wHRZn4AijtDo5lySCDTZBLgOCvA2d94fY3Co2N1d4yx8Bd2kHLGp63QFKY56onvxshVVmHhCqj709dF0d1XdEq3Z1pxKBnGEtsXilnK7g1qWN_MQOdZ5Xd7Ea3XSXXwPUiHzsST9MugtbDKDSRpf4zFc_RMB-zZF8FSUPYIl4C4vzB5rnlvNx7PIJiiIQeFfzZ7CoOt4_g22V216DJ2QWTt6CX7-JihaGf-HVE2xfxn5v9QS3bPCfh0a5RL5SBMjC_CFxMMTCJ_yBfbeqrMONDemHeSnvtSqtKBydgKwR26JeyPkH_OPt_MAUnBsiuzLk73PY-TaOUI6bVZAWENg1oBWSNXMlDjFvfQ98WcC6wHzE59yTcEp_L6x-jysIQEU3il0y8O37172FYfINCaYWo8gt-ruimXt6Ed_ZaupqyCnrfU5TbyD_weemQ5dhVUL7MQJnC0H5kPNluL6yojPCQUcM_WUYkOJPiyTlGyMmwwVxFVWhd2bVKk23gP6C8gOxXVdzaQtw0qowjGM7RH4zKqbJPxqbrUVz60_UAEyzHkUXlvBf5qaQKrBPhPzPxbshzpLKxLmEQZYGjnIhaCb-YkAWVTs1hvbcXnCK-jW1xLozS7cNJnGnkaDX-xZJvYevPaENo2lLc_y4JbQgP2KuluqJUl48uEzz9zkJYsei3kDqKm-U8Zb_rYIC8kv_p4S7HsFFeJIJoshawOdfpFbP_0TTNJqzt5sdT-RMBcTGNhzfEvnJCne0tTU_F2DZtywF1mksuaiMSjobabI8l6GC8D5D04wsZWTtA5zkbm6w7wVpCapy6CLYIfHJhBUq_32cfB443-LkJf4prZEqhz8eTXjL7bPMwn8ABje8vVJn0ZJkATZbAOTKZiuWZYvT32VHeJh16bThCkHGZRriSAG6nz1LCs6_mC
' Generated on: 2026-03-06T22:28:44.108788

@startuml
skinparam classAttributeIconSize 0
hide circle

class PizzeriaConfigLoaderTest {
  ~loadsConfigValues(): void
  ~throwsWhenMismatchedArrays(tempDir: Path): void
  ~throwsWhenNonPositiveValues(tempDir: Path): void
}

class OrderQueueTest {
  +testAddOrder(): void
  +testTakeOrder(): void
  +testQueueEmpty(): void
  +testCloseStopsTake(): void
  +testAddAfterCloseThrows(): void
}

class PizzeriaManagerTest {
  -createManager(configPath: String): PizzeriaManager
  ~placeOrderRejectedAfterStop(): void
  ~startAndProcessOrders(tempDir: Path): void
  ~logsUseStrictBracketedFormat(tempDir: Path): void
}

class PizzaCourierTest {
  ~testCourierInitialization(): void
  ~courierDeliversAndStopsWhenWarehouseClosed(): void
}

class WarehouseTest {
  ~testInitialization(): void
  ~testStorePizza(): void
  ~testTakePizza(): void
  ~testCloseReturnsNullWhenEmpty(): void
  ~tryTakePizzaDrainsWithoutBlocking(): void
}

class PizzaBakerTest {
  ~testBakerInitialization(): void
  ~bakerProcessesOrderAndStopsWhenQueueClosed(): void
}

class PizzaOrderTest {
  +testOrderCreation(): void
  +testOrderStatusUpdate(): void
  +testOrderIdIncrements(): void
  +testFormattedStatus(): void
}

class PizzeriaFactory {
  +create(config: PizzeriaConfig, statusSink: OrderStatusSink): PizzeriaManager
}

class PizzeriaConfigLoader {
  -configFilePath: String
  --
  +PizzeriaConfigLoader(configFilePath: String)
  +load(): PizzeriaConfig
  -readIntArray(node: JsonNode): int[]
  -validateConfig(config: JsonNode): void
  -requireField(config: JsonNode, fieldName: String): void
  -validatePositive(fieldName: String, value: int): void
  -validatePositiveArray(fieldName: String, values: int[]): void
}

interface PizzeriaConfigSource {
  ~load(): PizzeriaConfig
}

class Main {
  +{static} main(args: String[]): void
}

class ConsoleOrderStatusSink {
  +emit(order: PizzaOrder): void
}

class PizzaBaker {
  -id: int
  -bakingSpeed: int
  -orderQueue: OrdersOutbox
  -warehouse: PizzaStorageIn
  -statusSink: OrderStatusSink
  -delayStrategy: DelayStrategy
  --
  +PizzaBaker(id: int, bakingSpeed: int, orderQueue: OrdersOutbox, warehouse: PizzaStorageIn, statusSink: OrderStatusSink, delayStrategy: DelayStrategy)
  +run(): void
  +workerName(): String
  +getId(): int
}

interface OrdersOutbox {
  ~takeOrder(): PizzaOrder
}

class ThreadSleepDelay {
  +pause(millis: long): void
}

class PizzeriaManager {
  -orderQueue: OrdersInbox
  -warehouse: PizzaStorageIn
  -bakers: List<Worker>
  -couriers: List<Worker>
  -statusSink: OrderStatusSink
  -bakerThreads: List<Thread>
  -courierThreads: List<Thread>
  -acceptingOrders: boolean = true
  --
  +PizzeriaManager(orderQueue: OrdersInbox, warehouse: PizzaStorageIn, bakers: List<Worker>, couriers: List<Worker>, statusSink: OrderStatusSink)
  +startPizzeria(): void
  +placeOrder(pizzaType: String): void
  +stopPizzeria(): void
  -joinThreads(threads: List<Thread>, workerType: String): void
}

interface PizzaStorageIn {
  ~storePizza(order: PizzaOrder): void
  ~close(): void
}

class PizzaOrder {
  -{static} idCounter: AtomicInteger = new AtomicInteger(0)
  -id: int
  -type: String
  -status: OrderStatus
  --
  +PizzaOrder(type: String)
  +getId(): int
  +getType(): String
  +getStatus(): OrderStatus
  +transitionTo(status: OrderStatus): void
  +formattedStatus(): String
  +toString(): String
}

interface OrdersInbox {
  ~addOrder(order: PizzaOrder): void
  ~close(): void
}

interface Worker {
  ~workerName(): String
}

interface PizzaStorageOut {
  ~takePizza(): PizzaOrder
  ~tryTakePizza(): PizzaOrder
}

class OrderQueue {
  -orders: Queue<PizzaOrder>
  -accepting: boolean = true
  --
  +OrderQueue()
  +addOrder(order: PizzaOrder): void
  +takeOrder(): PizzaOrder
  +isEmpty(): boolean
  +close(): void
  +isAccepting(): boolean
  +toString(): String
}

interface OrderStatusSink {
  ~emit(order: PizzaOrder): void
}

interface DelayStrategy {
  ~pause(millis: long): void
}

class Warehouse {
  -capacity: int
  -storedPizzas: Queue<PizzaOrder>
  -closed: boolean = false
  --
  +Warehouse(capacity: int)
  +storePizza(order: PizzaOrder): void
  +takePizza(): PizzaOrder
  +tryTakePizza(): PizzaOrder
  +close(): void
  +getAvailablePizzaCount(): int
  +isClosed(): boolean
  +toString(): String
}

class PizzaCourier {
  -id: int
  -trunkCapacity: int
  -warehouse: PizzaStorageOut
  -statusSink: OrderStatusSink
  -delayStrategy: DelayStrategy
  --
  +PizzaCourier(id: int, trunkCapacity: int, warehouse: PizzaStorageOut, statusSink: OrderStatusSink, delayStrategy: DelayStrategy)
  +run(): void
  +workerName(): String
}

PizzeriaManagerTest ..> PizzeriaManager
PizzeriaFactory ..> OrderStatusSink
PizzeriaFactory ..> PizzeriaManager
PizzeriaConfigLoader ..|> PizzeriaConfigSource
ConsoleOrderStatusSink ..|> OrderStatusSink
ConsoleOrderStatusSink ..> PizzaOrder
PizzaBaker ..|> Worker
PizzaBaker *-- OrdersOutbox
PizzaBaker *-- PizzaStorageIn
PizzaBaker *-- OrderStatusSink
PizzaBaker *-- DelayStrategy
OrdersOutbox ..> PizzaOrder
ThreadSleepDelay ..|> DelayStrategy
PizzeriaManager *-- OrdersInbox
PizzeriaManager *-- PizzaStorageIn
PizzeriaManager o-- Worker
PizzeriaManager *-- OrderStatusSink
PizzaStorageIn ..> PizzaOrder
OrdersInbox ..> PizzaOrder
PizzaStorageOut ..> PizzaOrder
OrderQueue ..|> OrdersInbox
OrderQueue ..|> OrdersOutbox
OrderQueue o-- PizzaOrder
OrderStatusSink ..> PizzaOrder
Warehouse ..|> PizzaStorageIn
Warehouse ..|> PizzaStorageOut
Warehouse o-- PizzaOrder
PizzaCourier ..|> Worker
PizzaCourier *-- PizzaStorageOut
PizzaCourier *-- OrderStatusSink
PizzaCourier *-- DelayStrategy
@enduml